# docs/swagger.json
@@ -1205,6 +1205,10 @@
         "models.OrderResponse": {
             "type": "object",
             "properties": {
+                "autoenhance_last_updated_at": {
+                    "description": "Last update time from AutoEnhance",
+                    "type": "string"
+                },
                 "autoenhance_status": {
                     "description": "AutoEnhance data (when available)",
                     "type": "string"
@@ -1222,12 +1226,24 @@
                         "additionalProperties": true
                     }
                 },
+                "is_deleted": {
+                    "description": "Indicates if order was deleted in AutoEnhance",
+                    "type": "boolean"
+                },
+                "is_merging": {
+                    "description": "Indicates if brackets are currently being merged",
+                    "type": "boolean"
+                },
                 "is_processing": {
                     "type": "boolean"
                 },
                 "metadata": {
                     "type": "object",
                     "additionalProperties": true
+                },
+                "name": {
+                    "description": "Order name from AutoEnhance",
+                    "type": "string"
                 },
                 "order_id": {
                     "type": "string"
@@ -1256,6 +1272,10 @@
             "type": "object",
             "properties": {
                 "created_at": {
+                    "type": "string"
+                },
+                "name": {
+                    "description": "Order name from AutoEnhance",
                     "type": "string"
                 },
                 "order_id": {
@@ -1372,6 +1392,10 @@
         "models.StatusResponse": {
             "type": "object",
             "properties": {
+                "autoenhance_last_updated_at": {
+                    "description": "Last update time from AutoEnhance",
+                    "type": "string"
+                },
                 "autoenhance_status": {
                     "description": "AutoEnhance data",
                     "type": "string"
@@ -1382,6 +1406,14 @@
                         "type": "object",
                         "additionalProperties": true
                     }
+                },
+                "is_deleted": {
+                    "description": "Indicates if order was deleted in AutoEnhance",
+                    "type": "boolean"
+                },
+                "is_merging": {
+                    "description": "Indicates if brackets are currently being merged",
+                    "type": "boolean"
                 },
                 "is_processing": {
                     "type": "boolean"
